# openwrtui

oui-rpc-core/files/: oui.lua
oui-rpc-core/src/: CMakeLists.txt
oui-ui-core/: Config.in
oui-ui-core/files/usr/share/oui/menu.d/: .services.json.swp  services.json  status.json  system.json
oui-ui-core/files/usr/share/rpcd/acl.d/: oui.json
oui-ui-core/src/: .eslintrc.js  package-lock.json  package.json  vue.config.js
oui-ui-core/src/public/: index.html
oui-ui-core/src/src/: App.vue  i18n.js  router.js  store.js
oui-ui-core/src/src/components/: card-list.vue  card-table.vue  oui-line.vue
oui-ui-core/src/src/components/layout/src/: aside.vue  header.vue  layout.vue
oui-ui-core/src/src/components/uci-form/src/: filebrowser.vue  uci-dlist.vue  uci-form-body.js  uci-form-item.js  uci-form.vue  uci-option-dlist.js  uci-option-dummy.js  uci-option-file.js  uci-option-input.js  uci-option-list.js  uci-option-switch.js  uci-tab.js  (+5 more)
oui-ui-core/src/src/locales/: en.json  zh-CN.json
oui-ui-core/src/src/plugins/: debug.js  element.js  firewall.js  helper.js  menu.js  network.js  oui.js  session.js  string-format.js  system.js  ubus.js  uci.js  wireless.js
oui-ui-core/src/src/views/: home.vue  login.vue
oui-ui-core/src/src/views/network/: dhcp.vue  diagnostics.vue  hosts.vue  routes.vue  switch.vue  wireless.vue
oui-ui-core/src/src/views/services/: processes.vue  rtsp.vue
oui-ui-core/src/src/views/status/: dmesg.vue  syslog.vue
oui-ui-core/src/src/views/system/: admin.vue  cron.vue  leds.vue  oui-bwm.vue  software.vue  startup.vue  upgrade.vue  users.vue
(+18 files in other folders)
